# mx-bridge-eth-sc-rs

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  clean-wasm.sh  coverage.sh
bridge-proxy/: Cargo.toml  sc-config.toml
bridge-proxy/meta/: Cargo.toml
bridge-proxy/scenarios/: bridge-proxy.scen.json  bridge_proxy_execute_crowdfunding.scen.json
bridge-proxy/src/: bridge-proxy.rs  bridge_proxy_contract_proxy.rs  bridged_tokens_wrapper_proxy.rs  config.rs  esdt_safe_proxy.rs  events.rs
bridge-proxy/tests/: bridge_proxy_blackbox_test.rs  bridge_proxy_rust_test.rs  bridge_proxy_scenario_go_test.rs  bridge_proxy_scenario_rs_test.rs
bridge-proxy/wasm/: Cargo.toml
bridged-tokens-wrapper/: Cargo.toml  sc-config.toml
bridged-tokens-wrapper/mandos/: add_wrapped_token.scen.json  blacklist_token.scen.json  blacklist_usdc.scen.json  remove_wrapped_token.scen.json  setup.scen.json  unwrap_token.scen.json  unwrap_usdc.scen.json  whitelist_token.scen.json  whitelist_usdc.scen.json  wrap_token.scen.json  wrap_usdc.scen.json
bridged-tokens-wrapper/meta/: Cargo.toml
bridged-tokens-wrapper/scenarios/: add_wrapped_token.scen.json  blacklist_token.scen.json  remove_wrapped_token.scen.json  setup.scen.json  unwrap_token.scen.json  whitelist_token.scen.json  wrap_token.scen.json
bridged-tokens-wrapper/src/: dfp_big_uint.rs  esdt_safe_proxy.rs  events.rs  lib.rs
bridged-tokens-wrapper/tests/: bridged_tokens_wrapper_blackbox.rs  bridged_tokens_wrapper_scenario_rs_test.rs  bridged_tokens_wrapper_whitebox_test.rs  dfp_big_uint_test.rs  mandos_go_test.rs  scenario_go_test.rs  scenario_rs_test.rs
bridged-tokens-wrapper/wasm/: Cargo.toml
common/contract-proxies/: Cargo.toml
common/fee-estimator-module/: Cargo.toml
common/max-bridged-amount-module/: Cargo.toml
common/sc-proxies/: Cargo.toml
common/token-module/: Cargo.toml
common/tx-batch-module/: Cargo.toml
egld-esdt-swap/wasm/: Cargo.toml
esdt-safe/: Cargo.toml  sc-config.toml
esdt-safe/abi/: Cargo.toml
esdt-safe/interaction/: snippets.sh
esdt-safe/mandos/: add_refund_batch.scen.json  claim_fees.scen.json  create_another_tx_ok.scen.json  create_another_tx_too_late_for_batch.scen.json  create_transaction_not_enough_deposit.scen.json  create_transaction_ok.scen.json  create_transaction_over_max_amount.scen.json  create_transaction_without_fee_deposit.scen.json  deposit_egld.scen.json  distribute_fees.scen.json  execute_batch_both_rejected.scen.json  execute_batch_both_success.scen.json  execute_batch_one_success_one_rejected.scen.json  execute_transaction_rejected.scen.json  execute_transaction_success.scen.json  get_next_pending_tx.scen.json  get_next_tx_batch.scen.json  get_next_tx_batch_too_early.scen.json  setup_accounts.json  setup_accounts.scen.json  withdraw.scen.json  zero_fees.scen.json
esdt-safe/meta/: Cargo.toml
esdt-safe/scenarios/: add_refund_batch.scen.json  add_refund_batch_test_generated.scen.json  create_another_tx_ok.scen.json  create_another_tx_too_late_for_batch.scen.json  create_transaction_ok.scen.json  create_transaction_over_max_amount.scen.json  distribute_fees.scen.json  execute_batch_both_rejected.scen.json  execute_batch_both_success.scen.json  execute_batch_one_success_one_rejected.scen.json  execute_transaction_rejected.scen.json  execute_transaction_success.scen.json  get_next_pending_tx.scen.json  get_next_tx_batch.scen.json  setup_accounts.scen.json  upgrade_test_generated.scen.json  zero_fees.scen.json
esdt-safe/src/: esdt_safe_proxy.rs  fee_estimator.rs  lib.rs
esdt-safe/tests/: esdt_safe_blackbox_test.rs  esdt_safe_scenario_rs_test.rs  mandos_go_test.rs  mandos_test.rs  safe_mandos_go_test.rs  safe_mandos_rs_test.rs  scenario_go_test.rs  whitebox_test.rs
esdt-safe/wasm/: Cargo.toml
esdt-safe/wasm-esdt-safe-test/: Cargo.toml
ethereum-fee-prepay/: Cargo.toml  README.md
ethereum-fee-prepay/mandos/: default_fee.scen.json  init.scen.json  pay_fee.scen.json  prepare-aggregator.scen.json  prepay.scen.json  reserve_fee.scen.json  setup_accounts.scen.json  user_deposit_fee.scen.json
ethereum-fee-prepay/src/: aggregator_proxy.rs  aggregator_result.rs  lib.rs  priority.rs  transaction_type.rs
ethereum-fee-prepay/tests/: mandos_go_test.rs  mandos_test.rs
ethereum-fee-prepay/wasm/: Cargo.toml
helper-contract/: .gitignore  Cargo.toml
helper-contract/meta/: Cargo.toml
helper-contract/src/: helper_contract.rs
helper-contract/wasm/: Cargo.toml
multi-transfer-esdt/: Cargo.toml  README.md  sc-config.toml  set_state.json
multi-transfer-esdt/abi/: Cargo.toml
multi-transfer-esdt/interaction/: snippets.sh
multi-transfer-esdt/interactor/: Cargo.toml  state.toml
multi-transfer-esdt/mandos/: batch_transfer_both_executed.scen.json  batch_transfer_both_failed.scen.json  batch_transfer_one_executed_one_failed.scen.json  batch_transfer_to_frozen_account.scen.json  batch_transfer_with_wrapping.scen.json  distribute_fees.scen.json  setup_accounts.scen.json  transfer_ok.scen.json  two_transfers_same_token.scen.json
multi-transfer-esdt/meta/: Cargo.toml
multi-transfer-esdt/scenarios/: basic_transfer_test.scen.json  batch_transfer_both_executed.scen.json  batch_transfer_both_failed.scen.json  batch_transfer_one_executed_one_failed.scen.json  batch_transfer_to_frozen_account.scen.json  batch_transfer_with_wrapping.scen.json  setup_accounts.scen.json  transfer_fail_mint_burn_not_allowed.scen.json  transfer_ok.scen.json  transfer_role_token_test.scen.json  two_transfers_same_token.scen.json
multi-transfer-esdt/src/: bridge_proxy_contract_proxy.rs  bridged_tokens_wrapper_proxy.rs  esdt_safe_proxy.rs  esdt_safe_proxy_test_only.rs  lib.rs  multi_transfer_esdt_proxy.rs  multi_transfer_proxy.rs  token_whitelist_module.rs
multisig/: Cargo.toml  README.md  sc-config.toml
price-aggregator/: Cargo.toml  multiversx-price-aggregator-sc.abi.json  multiversx-price-aggregator-sc.mxsc.json  multiversx-price-aggregator-sc.wasm  price-aggregator-deprecated.abi.json  price-aggregator-deprecated.wasm  price-aggregator.abi.json  price-aggregator.wasm
test-caller/: Cargo.toml
(+262 files in other folders)
