[package]
name = "bridge-proxy"
version = "0.0.0"
authors = ["Costin Carabaș <costin.carabas@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/bridge-proxy.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.sc-proxies]
path = "../common/sc-proxies"

[dependencies.esdt-safe]
path = "../esdt-safe"

[dependencies.bridged-tokens-wrapper]
path = "../bridged-tokens-wrapper"

[dependencies.multiversx-sc]
version = "=0.52.3"

[dependencies.multiversx-sc-modules]
version = "0.52.3"

[dependencies.crowdfunding-esdt]
git = "https://github.com/multiversx/mx-contracts-rs"
rev = "d91bbff"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.52.3"
