[package]
name = "bridge-proxy"
version = "0.0.0"
authors = ["Costin Carabaș <costin.carabas@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/bridge-proxy.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.storage-module]
path = "../common/storage-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.sc-proxies]
path = "../common/sc-proxies"

[dependencies.mock-proxies]
path = "../common/mock-proxies"

[dependencies.esdt-safe]
path = "../esdt-safe"

[dependencies.bridged-tokens-wrapper]
path = "../bridged-tokens-wrapper"

[dependencies.mock-bridged-tokens-wrapper]
path = "../common/mock-contracts/mock-bridged-tokens-wrapper"

[dependencies.mock-esdt-safe]
path = "../common/mock-contracts/mock-esdt-safe"

[dependencies.mock-multisig]
path = "../common/mock-contracts/mock-multisig"

[dependencies.mock-price-aggregator]
path = "../common/mock-contracts/mock-price-aggregator"

[dependencies.mock-multi-transfer-esdt]
path = "../common/mock-contracts/mock-multi-transfer-esdt"

[dependencies.multiversx-sc]
version = "=0.55.0"

[dependencies.multiversx-sc-modules]
version = "0.55.0"

[dependencies.crowdfunding-esdt]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "5d1d915"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.55.0"
