[package]
name = "bridged-tokens-wrapper"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.multiversx-sc]
version = "=0.51.1"

[dependencies.multiversx-sc-modules]
version = "=0.51.1"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.51.1"
