[package]
name = "bridged-tokens-wrapper"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.storage-module]
path = "../common/storage-module"

[dependencies.sc-proxies]
path = "../common/sc-proxies"

[dependencies.mock-esdt-safe]
path = "../common/mock-contracts/mock-esdt-safe"

[dependencies.mock-multisig]
path = "../common/mock-contracts/mock-multisig"

[dependencies.mock-multi-transfer-esdt]
path = "../common/mock-contracts/mock-multi-transfer-esdt"

[dependencies.mock-bridge-proxy]
path = "../common/mock-contracts/mock-bridge-proxy"

[dependencies.mock-price-aggregator]
path = "../common/mock-contracts/mock-price-aggregator"

[dependencies.multiversx-sc]
version = "=0.53.2"

[dependencies.multiversx-sc-modules]
version = "=0.53.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.53.2"
