[package]
name = "esdt-safe"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.fee-estimator-module]
path = "../common/fee-estimator-module"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.multiversx-sc]
version = "0.41.3"

[dependencies.multiversx-sc-modules]
version = "0.41.3"
[dev-dependencies.multiversx-sc-scenario]
version = "0.41.3"
