[package]
name = "esdt-safe"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.fee-estimator-module]
path = "../common/fee-estimator-module"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.multiversx-price-aggregator-sc]
version = "=0.47.4"

[dependencies.multiversx-sc]
version = "=0.47.4"

[dependencies.multiversx-sc-modules]
version = "=0.47.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.47.4"
