[package]
name = "esdt-safe"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.fee-estimator-module]
path = "../common/fee-estimator-module"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.storage-module]
path = "../common/storage-module"

[dependencies.sc-proxies]
path = "../common/sc-proxies"

[dependencies.mock-proxies]
path = "../common/mock-proxies"

[dependencies.mock-bridged-tokens-wrapper]
path = "../common/mock-contracts/mock-bridged-tokens-wrapper"

[dependencies.mock-multisig]
path = "../common/mock-contracts/mock-multisig"

[dependencies.mock-bridge-proxy]
path = "../common/mock-contracts/mock-bridge-proxy"

[dependencies.mock-price-aggregator]
path = "../common/mock-contracts/mock-price-aggregator"

[dependencies.mock-multi-transfer-esdt]
path = "../common/mock-contracts/mock-multi-transfer-esdt"

[dependencies.multiversx-price-aggregator-sc]
version = "=0.55.0"

[dependencies.multiversx-sc]
version = "=0.55.0"

[dependencies.multiversx-sc-modules]
version = "=0.55.0"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.55.0"
