[package]
name = "ethereum-fee-prepay"
version = "0.0.0"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.aggregator]
git = "https://github.com/ElrondNetwork/sc-chainlink-rs"
rev = "1bef5ea"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.elrond-wasm]
version = "0.15.0"

[dependencies.elrond-wasm-derive]
version = "0.15.0"

[dependencies.elrond-wasm-node]
version = "0.15.0"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.15.0"
