[package]
name = "helper-contract"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/helper_contract.rs"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.sc-proxies]
path = "../common/sc-proxies"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"
