[package]
name = "multi-transfer-esdt"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.bridged-tokens-wrapper]
path = "../bridged-tokens-wrapper"

[dependencies.bridge-proxy]
path = "../bridge-proxy"

[dependencies.multiversx-sc]
version = "0.45.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.45.2"
