[package]
name = "multi-transfer-esdt"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.bridged-tokens-wrapper]
path = "../bridged-tokens-wrapper"

[dependencies.bridge-proxy]
path = "../bridge-proxy"

[dependencies.esdt-safe]
path = "../esdt-safe"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.storage-module]
path = "../common/storage-module"

[dependencies.mock-multisig]
path = "../common/mock-contracts/mock-multisig"

[dependencies.mock-multi-transfer-esdt]
path = "../common/mock-contracts/mock-multi-transfer-esdt"

[dependencies.mock-price-aggregator]
path = "../common/mock-contracts/mock-price-aggregator"

[dependencies.sc-proxies]
path = "../common/sc-proxies"

[dependencies.mock-proxies]
path = "../common/mock-proxies"

[dependencies.multiversx-sc]
version = "=0.55.0"

[dependencies.multiversx-sc-modules]
version = "=0.55.0"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.55.0"
