[package]
name = "multisig"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@elrond.com>, Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.fee-estimator-module]
path = "../common/fee-estimator-module"

[dependencies.esdt-safe]
path = "../esdt-safe"

[dependencies.multi-transfer-esdt]
path = "../multi-transfer-esdt"

[dependencies.elrond-wasm]
version = "0.22.10"

[dev-dependencies.elrond-wasm-debug]
version = "0.22.10"
