[package]
name = "multisig"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@elrond.com>, Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.fee-estimator-module]
path = "../common/fee-estimator-module"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.mock-multi-transfer-esdt]
path = "../common/mock-contracts/mock-multi-transfer-esdt"

[dependencies.mock-esdt-safe]
path = "../common/mock-contracts/mock-esdt-safe"

[dependencies.mock-price-aggregator]
path = "../common/mock-contracts/mock-price-aggregator"

[dependencies.sc-proxies]
path = "../common/sc-proxies"

[dependencies.esdt-safe]
path = "../esdt-safe"

[dependencies.multi-transfer-esdt]
path = "../multi-transfer-esdt"

[dependencies.bridged-tokens-wrapper]
path = "../bridged-tokens-wrapper"

[dependencies.bridge-proxy]
path = "../bridge-proxy"

[dependencies.multiversx-sc]
version = "=0.55.0"

[dependencies.multiversx-price-aggregator-sc]
version = "=0.55.0"

[dependencies.multiversx-sc-modules]
version = "=0.55.0"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.55.0"
