[package]
name = "test-caller"
version = "0.0.0"
authors = ["Iulian Pascalau <iulian.pascalau@multiversx.com>"]
edition = "2018"
publish = false

[lib]
path = "src/test-caller.rs"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"

[dependencies.multiversx-sc-modules]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"
