[package]
name = "contract-proxies"
version = "0.0.0"
authors = [ "dorin-iancu <dorin.iancu@elrond.com>",]
edition = "2018"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.transaction]
path = "../transaction"

[dependencies.elrond-wasm]
version = "0.18.2"

[dependencies.elrond-wasm-derive]
version = "0.18.2"

[dependencies.elrond-wasm-node]
version = "0.18.2"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.18.2"
