[package]
name = "max-bridged-amount-module"
version = "0.0.0"
authors = ["dorin-iancu <dorin.iancu@elrond.com>"]
edition = "2018"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "215503a"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "215503a"
