[package]
name = "sc-proxies"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2018"

[dependencies.multiversx-sc]
version = "=0.52.3"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.52.3"

[dependencies.transaction]
path = "../transaction"

[dependencies.eth-address]
path = "../eth-address"

[dependencies.token-module]
path = "../token-module"

[dependencies.tx-batch-module]
path = "../tx-batch-module"
