[package]
name = "sc-proxies"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2018"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "215503a"

[dependencies.transaction]
path = "../transaction"

[dependencies.eth-address]
path = "../eth-address"

[dependencies.token-module]
path = "../token-module"

[dependencies.tx-batch-module]
path = "../tx-batch-module"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "215503a"
