[package]
name = "token-module"
version = "0.0.0"
authors = ["dorin-iancu <dorin.iancu@elrond.com>"]
edition = "2018"

[dependencies.fee-estimator-module]
path = "../fee-estimator-module"

[dependencies.multiversx-sc]
version = "=0.53.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.53.2"
