[package]
name = "token-module"
version = "0.0.0"
authors = ["dorin-iancu <dorin.iancu@elrond.com>"]
edition = "2018"

[dependencies.fee-estimator-module]
path = "../fee-estimator-module"

[dependencies.storage-module]
path = "../storage-module"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"
