[package]
name = "ethereum-fee-prepay-wasm"
version = "0.0.0"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.ethereum-fee-prepay]
features = [ "wasm-output-mode",]
default-features = false
path = ".."

[dependencies.elrond-wasm-output]
version = "0.14.0"
features = [ "wasm-output-mode",]
