[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "rust-interact"
path = "src/interactor_main.rs"

[lib]
path = "src/interact.rs"

[dependencies.multi-transfer-esdt]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.55.0"

[dependencies.multiversx-sc]
version = "0.55.0"

[dependencies.transaction]
path = "../../common/transaction"

[dependencies.tx-batch-module]
path = "../../common/tx-batch-module"


[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"

[features]
chain-simulator-tests = []

