[package]
name = "multi-transfer-esdt-meta"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[dev-dependencies]

[dependencies.multi-transfer-esdt]
path = ".."

[dependencies.multiversx-sc-meta-lib]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "215503a"
default-features = false
