[package]
name = "multi-transfer-esdt-wasm"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = false

[profile.dev]
panic = "abort"

[dependencies.multi-transfer-esdt]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "=0.52.2"

[workspace]
members = ["."]
