[package]
name = "multisig-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@elrond.com>, Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[dependencies.multisig]
path = ".."

[dependencies.multiversx-sc-meta-lib]
version = "=0.55.0"
default-features = false
