[package]
name = "multisig-wasm"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@elrond.com>, Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.multisig]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.41.3"

[workspace]
members = ["."]
