[package]
name = "esdt_safe"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main.rs"

[dependencies.esdt-safe]
path = "../../esdt-safe"

[dependencies.multi-transfer-esdt]
path = "../../multi-transfer-esdt"

[dependencies.transaction]
path = "../../common/transaction"

[dependencies.eth-address]
path = "../../common/eth-address"

[dependencies.fee-estimator-module]
path = "../../common/fee-estimator-module"

[dependencies.token-module]
path = "../../common/token-module"

[dependencies.tx-batch-module]
path = "../../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../../common/max-bridged-amount-module"

[dependencies.multiversx-price-aggregator-sc]
version = "=0.52.0"

[dependencies.multiversx-sc]
version = "=0.52.3"

[dependencies.multiversx-sc-modules]
version = "=0.52.3"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.52.3"