[package]
name = "wrapped-bridged-usdc-wasm"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@elrond.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.wrapped-bridged-usdc]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.29.3"

[dependencies.elrond-wasm-output]
version = "0.29.3"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
