[package]
name = "mock-bridge-proxy"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/mock_bridge_proxy.rs"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"
