[package]
name = "mock-bridged-tokens-wrapper"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/mock_bridged_tokens_wrapper.rs"

[dependencies.eth-address]
path = "../../eth-address"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "215503a"


[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "215503a"

