[package]
name = "mock-esdt-safe"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/mock_esdt_safe.rs"

[dependencies.multiversx-sc]
version = "0.56.1"

[dependencies.multiversx-sc-modules]
version = "0.56.1"

[dependencies.eth-address]
path = "../../eth-address"

[dev-dependencies.multiversx-sc-scenario]
version = "0.56.1"
