[package]
name = "mock-esdt-safe"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/mock_esdt_safe.rs"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"

[dependencies.multiversx-sc-modules]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"

[dependencies.eth-address]
path = "../../eth-address"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "3050fab"
